--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/customer-details/customer-details-list/customer-details-list.component.html
@@ -114,13 +114,17 @@
                 <ng-container matColumnDef="panCardName">
                     <mat-header-cell *matHeaderCellDef>Name on PAN Card</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.kycDetails?.nameOnPanCard ? element?.kycDetails?.nameOnPanCard : '-'}}
+                        <!-- {{element?.kycDetails?.nameOnPanCard ? element?.kycDetails?.nameOnPanCard : '-'}} -->
+                        <span *ngIf = "element?.kycDetails?.nameOnPanCard else blank">{{element?.kycDetails?.nameOnPanCard | titlecase}}</span>
+
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="panCardNumber">
                     <mat-header-cell *matHeaderCellDef>PAN Card No.</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.kycDetails?.panCardNumber ? element?.kycDetails?.panCardNumber : '-'}}
+                        <!-- {{element?.kycDetails?.panCardNumber ? element?.kycDetails?.panCardNumber : '-'}} -->
+                        <span *ngIf = "element?.kycDetails?.panCardNumber else blank">{{element?.kycDetails?.panCardNumber | uppercase}}</span>
+
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="viewPanCard">
@@ -145,6 +149,7 @@
                         </div>
                     </mat-cell>
                 </ng-container>
+                <ng-template #blank>-</ng-template>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns;" style="width: 250%;"></mat-header-row>
 
