--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -190,7 +190,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="updateStatus(element)" class="kt-pointer">Update</div>
+                            <div (click)="updateStatus(element)" class="kt-pointer">Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
