--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -192,7 +192,7 @@
 						<div class="col-8">
 							<div class="input-group mb-3">
 								<input type="text" class="form-control" placeholder="Select File"
-									aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
+									aria-label="Recipient's username" aria-describedby="basic-addon2"
 									formControlName="form60"
 									[class.isError]="controls.form60.touched && controls.form60.invalid" />
 								<div class="input-group-append">
