--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -218,10 +218,14 @@
                     <ng-container *ngIf="identityImageArray?.length > 0">
                         <div class="col-4" *ngFor="let pass of identityImageArray, index as idx">
                             <div class="img-container">
-                                <img class="fetched-image" [src]="pass" style="border-radius: 15px;" alt=""
-                                    (click)="previewImage(pass)" />
+                                <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
+                                    style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
                                 <img *ngIf="viewOnly" src="../../../../../assets/media/icons/cancel.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx, 'identityProof');">
+                                <div class="iframeWrapper" (click)="previewPdf(pass)">
+                                    <iframe [src]="pass | safe : 'resourceUrl'" height="250" width="290" scrolling="no"
+                                        *ngIf="isPdf(pass)"></iframe>
+                                </div>
                             </div>
                         </div>
                     </ng-container>
@@ -405,10 +409,14 @@
                     <ng-container *ngIf="addressImageArray1?.length > 0">
                         <div class="col-4" *ngFor="let pass of addressImageArray1, index as idx">
                             <div class="img-container">
-                                <img class="fetched-image" [src]="pass" style="border-radius: 15px;" alt=""
-                                    (click)="previewImage(pass)" />
+                                <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
+                                    style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
                                 <img *ngIf="viewOnly" src="../../../../../assets/media/icons/cancel.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx, 'permanent');">
+                                <div class="iframeWrapper" (click)="previewPdf(pass)">
+                                    <iframe [src]="pass | safe : 'resourceUrl'" height="250" width="290" scrolling="no"
+                                        *ngIf="isPdf(pass)"></iframe>
+                                </div>
                             </div>
                         </div>
                     </ng-container>
@@ -607,10 +615,14 @@
                     <ng-container *ngIf="addressImageArray2?.length > 0">
                         <div class="col-4" *ngFor="let pass of addressImageArray2, index as idx">
                             <div class="img-container">
-                                <img class="fetched-image" [src]="pass" style="border-radius: 15px;" alt=""
-                                    (click)="previewImage(pass)" />
+                                <img *ngIf="!isPdf(pass)" class="fetched-image" [src]="pass"
+                                    style="border-radius: 15px;" alt="" (click)="previewImage(pass)" />
                                 <img *ngIf="viewOnly" src="../../../../../assets/media/icons/cancel.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx, 'residential');">
+                                <div class="iframeWrapper" (click)="previewPdf(pass)">
+                                    <iframe [src]="pass | safe : 'resourceUrl'" height="250" width="290" scrolling="no"
+                                        *ngIf="isPdf(pass)"></iframe>
+                                </div>
                             </div>
                         </div>
                     </ng-container>
@@ -842,10 +854,18 @@
                         <div class="col-8 offset-4">
                             <div class="img-container kt-margin-r-15">
                                 <ng-container>
-                                    <img class="fetched-image"
+                                    <img *ngIf="!isPdf(data.customerKycReview.customerKycPersonal.signatureProofImg)"
+                                        class="fetched-image"
                                         [src]="data.customerKycReview.customerKycPersonal.signatureProofImg"
                                         style="border-radius: 15px;" alt=""
                                         (click)="previewImage(data.customerKycReview.customerKycPersonal.signatureProofImg)" />
+                                    <div class="iframeWrapper"
+                                        (click)="previewPdf(data.customerKycReview.customerKycPersonal.signatureProofImg)">
+                                        <iframe
+                                            [src]="data.customerKycReview.customerKycPersonal.signatureProofImg | safe : 'resourceUrl'"
+                                            height="250" width="290" scrolling="no"
+                                            *ngIf="isPdf(data.customerKycReview.customerKycPersonal.signatureProofImg)"></iframe>
+                                    </div>
                                     <ng-container *ngIf="viewOnly">
                                         <img *ngIf="data.customerKycReview.customerKycPersonal.signatureProofImg"
                                             src="../../../../../assets/media/icons/cancel.svg" alt=""
